[package]
name = "ero-lapin"
version = "0.3.1"
authors = ["Alexey Voznyuk <me@swizard.info>"]
edition = "2018"

[dependencies]
ero = { git = "https://github.com/swizard0/ero.git" }
log = "^0.4"
tokio = "^0.1"
lapin = "^0.28"
futures = "^0.1"
lapin-futures = "^0.28"

[dev-dependencies]
pretty_env_logger = "^0.3"
